# Nightmare-Cleaning

./: .gitignore  LICENSE  README.md  example.py  install.bat  install.ps1  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml
nightmare_cleaner/: __init__.py  audit_logger.py  cli.py  config.py  security.py  system_info.py  ui.py
nightmare_cleaner/modules/: __init__.py  browser_cache.py  cdrive_cleaner.py  delivery_optimization.py  disk_cleanup.py  dns_cache.py  error_reports.py  font_cache.py  memory_cleaner.py  prefetch.py  recycle_bin.py  store_cache.py  temp_cleaner.py  thumbnail_cache.py  uninstaller.py  user_temp.py  windows_logs.py  windows_temp.py  windows_update.py
