[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nightmare-cleaner"
version = "2.0.0"
description = "A modular, high-performance Windows Cleaner and Optimizer CLI tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mahmoud-O", email = "mahmoud4h5@gmail.com"}
    {name = "Moamen-R", email = "moamen.refaey.dev@gmail.com"},
]
keywords = ["windows", "cleaner", "optimizer", "cli", "system-tools", "security", "cache"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "click>=8.1.7",
    "colorama>=0.4.6",
    "psutil>=5.9.8",
    "rich>=13.7.0",
]

[project.scripts]
nightmare = "nightmare_cleaner.cli:main"

[project.urls]
Homepage = "https://github.com/Moamen-R/Nightmare-Cleaning"
Repository = "https://github.com/Moamen-R/Nightmare-Cleaning"



